<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.FirstScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="24dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_photo"
                android:contentDescription="user icon"
                android:layout_marginBottom="24dp"/>

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_text"
                android:layout_marginTop="30dp"
                android:hint="@string/name"
                android:textColor="@color/blue"
                android:padding="12dp"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/etPalindrome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_text"
                android:hint="@string/palindrome"
                android:textColor="@color/blue"
                android:padding="12dp"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/btnCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/check"
                app:cornerRadius="8dp"
                android:backgroundTint="@color/blue"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="8dp"
                android:backgroundTint="@color/blue"
                android:text="@string/next"/>
        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>